- removed redundant things from ssr template - fix e2e tests

--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <!--head-outlet-->
   </head>
   <body class="font-roboto antialiased">
-    <div id="root"><!--ssr-outlet--></div>
-    <script>
-      <!--rqs-outlet-->
-    </script>
+    <div id="root"></div>
     <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
